syntax = "proto3";

package blog;
option go_package = "github.com/bigsky-park/go-grpc-example/blog;blog";

import "google/protobuf/timestamp.proto";

service BlogService {
  rpc CreatePost (CreatePostRequest) returns (CreatePostResponse) {}

  rpc GetPost (GetPostRequest) returns (GetPostResponse) {}

  rpc ListPosts (ListPostsRequest) returns (ListPostsResponse) {}
}

message Post {
  string id = 1;
  string title = 2;
  string writer = 3;
  string content = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreatePostRequest {
  string title = 1;
  string writer = 2;
  string content = 3;
}

message CreatePostResponse {
  Post post = 1;
}

message GetPostRequest {
  string writer = 1;
  string id = 2;
}

message GetPostResponse {
  Post post = 1;
}

message ListPostsRequest {
  string writer = 1;
}

message ListPostsResponse {
  repeated Post posts = 1;
}
